--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div id="menu_list" class="overlay">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <div class="overlay-content">
-      <a href="housequiz.html">Quiz</a>
+      <a href="index.html">Quiz</a>
       <a href="Gallery.html">Gallery</a>
       <a href="Game.html">Game</a>
       <a href="#">Game</a>
