--- a/Game.html
+++ b/Game.html
@@ -24,7 +24,7 @@
   <div id="menu_list" class="overlay">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <div class="overlay-content">
-      <a href="quiz.html">Quiz</a>
+      <a href="index.html">Quiz</a>
       <a href="Gallery.html">Gallery</a>
       <a href="Game.html">Game</a>
       <a href="#">Comment</a>
